# hackathon

./: .clangd  .env.example  .gitignore  AI_COMPONENTS.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_SERVER.md  DOCS_SUMMARY.md  FINAL_STATUS.md  FIXES_APPLIED.md  GIT_PUSH_SUMMARY.md  HOSTING_COMPARISON.md  HOSTING_SUMMARY.txt  INTEGRATION_REVIEW.md  OLLAMA_INTEGRATION_COMPLETE.md  OLLAMA_RU.md  OLLAMA_SETUP.md  QUICKSTART.md  README.md  README_HOSTING.md  READY_FOR_HACKATHON.md  SUMMARY.md  docker-compose.yml  fix_gemini_key.sh  pyproject.toml  quick_test_ollama.sh  test_integration.sh  test_ollama.sh  test_ollama_integration.py  test_system.sh
.github/workflows/: backend-ci.yml
app/: main.py  routers.py  schemas.py
asset/: README (Copy).md  documents
backend_cpp/: .dockerignore  CMakeLists.txt  Dockerfile  compile_commands.json  main.cpp
backend_python/: Dockerfile  auth.py  database.py  main.py  main.py.backup  rag_engine.py  requirements.txt
backend_python/routers/: auth_router.py  cards.py  (+2 more)
docs/: CHECKLIST.md  HACKATHON_PRESENTATION.md  PITCH.md  QUICK_DEPLOY.md  README.md
front/: about-script.js  about-style.css  about.html  admin-script.js  admin.html  ai-chat.css  ai-chat.html  chat-script.js  chat.html  chat.js  contacts.html  header-auth.js  i18n.js  index.html  list-script.js  list-style.css  list.html  nginx.conf  person.html  script-back.js  script.js  style.css  suggestions-script.js  suggestions.html  todo.txt
frontend_html/: about-script.js  api.js  index.html  list-style.css
frontend_python/: app.py  requirements.txt
scripts/: deploy.sh  start.sh
(+2 files in other folders)
